@@ -31,6 +31,7 @@ import com.here.xyz.jobs.steps.impl.tools.ResourceAndTimeCalculator;
 import com.here.xyz.jobs.steps.inputs.Input;
 import com.here.xyz.jobs.steps.inputs.UploadUrl;
 import com.here.xyz.jobs.steps.outputs.FeatureStatistics;
+import com.here.xyz.jobs.steps.resources.IOResource;
 import com.here.xyz.jobs.steps.resources.Load;
 import com.here.xyz.jobs.steps.resources.TooManyResourcesClaimed;
 import com.here.xyz.models.hub.Space;
@@ -41,7 +42,6 @@ import io.vertx.core.json.JsonObject;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.logging.log4j.LogManager;
@@ -66,7 +66,7 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
   private double neededACUs = -1;
 
   @JsonView({Internal.class})
-  private long uncompressedTotalBytes;
+  private long uncompressedTotalBytes = -1;
 
   @JsonView({Internal.class, Static.class})
   private int fileCount = -1;
@@ -106,11 +106,13 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
   @Override
   public List<Load> getNeededResources() {
     try {
-
       double acus = calculateNeededAcus();
       Database db = loadDatabase(loadSpace(getSpaceId()).getStorage().getId(), WRITER);
 
-      return Collections.singletonList(new Load().withResource(db).withEstimatedVirtualUnits(acus));
+      long ioBytes = uncompressedTotalBytes == -1 ? getUncompressedUploadBytesEstimation() : uncompressedTotalBytes;
+
+      return List.of(new Load().withResource(db).withEstimatedVirtualUnits(acus),
+          new Load().withResource(IOResource.getInstance()).withEstimatedVirtualUnits(ioBytes));
     }
     catch (WebClientException e) {
       throw new RuntimeException(e);
@@ -138,11 +140,14 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
 
   @Override
   public void deleteOutputs() {
-      try {
-          onAsyncSuccess();
-      } catch (Exception e) {
-          throw new RuntimeException(e);
-      }
+    super.deleteOutputs();
+
+    /** @TODO:
+     * Currently we only have non-retryable import jobs. If we introduce some, we need to implement the resource
+     * cleanup properly. One possibility could be to add the restriction that steps only could have temporary
+     * resources during their execution. To not lose the temporary information, which is relevant for a retry,
+     * it would be required to write those into a system output.
+     */
   }
 
   @Override
@@ -288,32 +293,28 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
 
     logAndSetPhase(null, "Loading space config for space "+getSpaceId());
     Space space = loadSpace(getSpaceId());
+    String rootTableName = getRootTableName(space);
 
     logAndSetPhase(null, "Getting storage database for space  "+getSpaceId());
     Database db = loadDatabase(space.getStorage().getId(), WRITER);
-
     try {
-      logAndSetPhase(Phase.RETRIEVE_STATISTICS);
-      FeatureStatistics statistics = runReadQuerySync(buildStatisticDataOfTemporaryTableQuery(getSchema(db)), db,
-              0, rs -> rs.next()
-                      ? new FeatureStatistics().withFeatureCount(rs.getLong("imported_rows")).withByteSize(rs.getLong("imported_bytes"))
-                      : new FeatureStatistics());
 
-      logAndSetPhase(null, "Statistics: bytes="+statistics.getByteSize()+" rows="+ statistics.getFeatureCount());
+    logAndSetPhase(Phase.RETRIEVE_STATISTICS);
+    FeatureStatistics statistics = runReadQuerySync(buildStatisticDataOfTemporaryTableQuery(getSchema(db)), db,
+            0, rs -> rs.next()
+                    ? new FeatureStatistics().withFeatureCount(rs.getLong("imported_rows")).withByteSize(rs.getLong("imported_bytes"))
+                    : new FeatureStatistics());
 
-      registerOutputs(List.of(statistics), true);
+    logAndSetPhase(null, "Statistics: bytes="+statistics.getByteSize()+" rows="+ statistics.getFeatureCount());
+    registerOutputs(List.of(statistics), true);
 
-      logAndSetPhase(Phase.WRITE_STATISTICS);
-      registerOutputs(new ArrayList<>(){{ add(statistics);}}, true);
+    logAndSetPhase(Phase.WRITE_STATISTICS);
+    registerOutputs(new ArrayList<>(){{ add(statistics);}}, true);
 
-      logAndSetPhase(Phase.DROP_TRIGGER);
-      runWriteQuerySync(buildDropImportTrigger(getSchema(db), getRootTableName(space)), db, 0);
+    cleanUpDbRelatedResources(rootTableName, db);
 
-      logAndSetPhase(Phase.DROP_TMP_TABLE);
-      runWriteQuerySync(buildDropTemporaryTableForImportQuery(getSchema(db)), db, 0);
-
-      logAndSetPhase(Phase.RELEASE_READONLY);
-      hubWebClient().patchSpace(getSpaceId(), Map.of("readOnly", false));
+    logAndSetPhase(Phase.RELEASE_READONLY);
+    hubWebClient().patchSpace(getSpaceId(), Map.of("readOnly", false));
 
     }catch (SQLException e){
       //relation "*_job_data" does not exist - can happen when we have received twice a SUCCESS_CALLBACK
@@ -325,13 +326,35 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
     }
   }
 
+  private void cleanUpDbRelatedResources(String rootTableName, Database db) throws TooManyResourcesClaimed, SQLException, WebClientException {
+      logAndSetPhase(Phase.DROP_TRIGGER);
+      runWriteQuerySync(buildDropImportTrigger(getSchema(db), rootTableName), db, 0);
+
+      logAndSetPhase(Phase.DROP_TMP_TABLE);
+      runWriteQuerySync(buildDropTemporaryTableForImportQuery(getSchema(db)), db, 0);
+  }
+
   @Override
   protected boolean onAsyncFailure() {
-    //TODO: Inspect the error provided in the status and decide whether it is retryable (return-value)
-    /** Failed Import
-     *  onFailure (take retryable into account)
-     */
-    return false;
+    try {
+      //TODO: Inspect the error provided in the status and decide whether it is retryable (return-value)
+      boolean isRetryable = false;
+
+      if(!isRetryable) {
+        logAndSetPhase(null, "Loading space config for space " + getSpaceId());
+        Space space = loadSpace(getSpaceId());
+        String rootTableName = getRootTableName(space);
+
+        logAndSetPhase(null, "Getting storage database for space  " + getSpaceId());
+        Database db = loadDatabase(space.getStorage().getId(), WRITER);
+
+        cleanUpDbRelatedResources(rootTableName, db);
+      }
+
+      return isRetryable;
+    } catch (Exception e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Override
@@ -535,7 +558,7 @@ public class ImportFilesToSpace extends SpaceBasedStep<ImportFilesToSpace> {
     return calculatedThreadCount > fileCount ? fileCount : calculatedThreadCount;
   }
 
-  private void logAndSetPhase(Phase newPhase, String... messages){
+  private void logAndSetPhase(Phase newPhase, String... messages) {
     if (newPhase != null)
       phase = newPhase;
     logger.info("[{}@{}] ON/INTO '{}' {}", getGlobalStepId(), getPhase(), getSpaceId(), messages.length > 0 ? messages : "");
